--- a/py101.md
+++ b/py101.md
@@ -810,7 +810,7 @@ sales, student marks stored subject wise`.
 #### 9.4 Summary
 
 - `Dictionary` doesn't maintain the key, value pair order.
-- `.get()` method is used to value of the key in dictionary. If `key` is missing
+- `.get()` method is used to find value of the key in dictionary. If `key` is missing
 `None` is returned.
 
 #### 10.1 Exceptions
